# CC-Rogue-Like-Game

./: CMakeLists.txt  Enemy.d  README.md  build_err.txt  build_full.txt  build_log.txt  build_out.txt  main.cpp  main.d  make_err.txt  make_out.txt  out.txt  test_compile.cpp
include/: combat.h  entities.h  game.h  input.h  map.h  menu.h  render.h  utils.h
src/: combat.cpp  entities.cpp  game.cpp  input.cpp  main.cpp  map.cpp  menu.cpp  render.cpp  utils.cpp
src/assets/textures/scenarios/Pack_forest/Banner/: Banner.aseprite  Banner_2.aseprite
src/assets/textures/scenarios/Pack_forest/Grass transition/: Grass_transition_01.aseprite
src/assets/textures/scenarios/Pack_forest/Tree/: Tree_1.aseprite
src/assets/textures/scenarios/Pack_forest/Wall Stone/: Wall_01.aseprite
src/assets/textures/scenarios/Pack_forest/props/Flowers/: Flowers_01.aseprite
src/assets/textures/scenarios/Pack_forest/props/Mushroom/: Mushroom_01.aseprite
src/assets/textures/scenarios/Pack_forest/props/bush/: bush_01.aseprite
src/assets/textures/scenarios/Pack_forest/props/little stone/: little stone_01.aseprite
src/assets/textures/scenarios/Pack_forest/riverbank/: riverbank_01.aseprite
src/entities/enemies/: Enemy.cpp  Enemy.hpp
src/entities/hero/: Player.cpp  Player.hpp
src/entities/npc/: Companion.cpp  Companion.hpp  NPC.cpp  NPC.hpp
src/graphics/: Render.cpp  Render.hpp  TileMap.cpp  TileMap.hpp
src/items/: Item.cpp  Item.hpp
src/system/: Ranking.cpp  Ranking.hpp
src/traps/: Trap.cpp  Trap.hpp
src/ui/: AttributeMenu.cpp  AttributeMenu.hpp  GameOverScreen.cpp  GameOverScreen.hpp  HUD.cpp  HUD.hpp  Menu.cpp  Menu.hpp  RankingScreen.cpp  RankingScreen.hpp  VictoryScreen.cpp  VictoryScreen.hpp
src/world/: Level.cpp  Level.hpp  MapData.cpp  MapData.hpp  mapa_fase1.tmj  mapa_lvl_1.backup_before_dungeon_fix.tmj  mapa_lvl_1.backup_before_visual_tile_fix.tmj  mapa_lvl_1.tmj
